// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField renders correctly when disabled 1`] = `
<div
  aria-busy={false}
  className="input-component input-component--disabled"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={true}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly when loading 1`] = `
<div
  aria-busy={true}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__loader--container"
      >
        <div
          className="input-component__loader"
        >
          <div
            className="monday-loader-component"
            role="alert"
            title="loading"
          >
            <svg
              className="circle-loader-spinner input-component__loader-svg"
              viewBox="0 0 50 50"
            >
              <circle
                className="circle-loader-spinner-path"
                cx="25"
                cy="25"
                fill="none"
                r="20"
                strokeWidth="5"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly when readonly 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={true}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly when required 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={true}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with another type 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="password"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with className 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="testClassName input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with className 2`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="testClassName input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with date type 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="date"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with date-time type 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="datetime-local"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with icon 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input input-component__input--has-icon"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      >
        <span
          aria-hidden={true}
          aria-label=""
          className="icon_component input-component__icon icon_component--no-focus-style fa fa-star"
          onClick={[Function]}
          role="img"
        />
      </div>
      <div
        className="input-component__icon--container input-component__icon--container-has-icon"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with iconsNames 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with id 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="testId"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with labelIconName 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with large size 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-large"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with placeholder 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label="placeholder"
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder="placeholder"
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with role 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role="button"
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with secondaryIconName 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input input-component__input--has-icon"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-has-icon input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-has-icon"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      >
        <span
          aria-hidden={true}
          aria-label=""
          className="icon_component input-component__icon icon_component--no-focus-style fa fa-star"
          onClick={[Function]}
          role="img"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with showCharCount 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
    <div
      className="input-component__sub-text-container"
    >
      <span
        aria-label="Input char count"
        className="input-component__sub-text-container-counter"
      >
        0
      </span>
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with validation 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small input-component__input--error-validation"
    >
      <input
        aria-activedescendant=""
        aria-invalid={true}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
    <div
      className="input-component__sub-text-container"
    >
      <span
        aria-label="Additional helper text"
        className="input-component__sub-text-container-status"
      >
        error
      </span>
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with value 1`] = `
<div
  aria-busy={false}
  className="input-component"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value="value"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;

exports[`TextField renders correctly with wrapperClassName 1`] = `
<div
  aria-busy={false}
  className="input-component testClassName"
  role=""
>
  <div
    className="input-component__label--wrapper"
  >
    <div
      className="input-component__input-wrapper input-component__input-wrapper--size-small"
    >
      <input
        aria-activedescendant=""
        aria-invalid={null}
        aria-label=""
        aria-owns=""
        autoComplete="off"
        className="input-component__input"
        disabled={false}
        id="input"
        maxLength={null}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        placeholder=""
        readOnly={false}
        required={false}
        role=""
        type="text"
        value=""
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
      <div
        className="input-component__icon--container input-component__icon--container-active"
        onClick={[Function]}
        onDragStart={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="button"
        tabIndex="-1"
      />
    </div>
  </div>
</div>
`;
